--- a/index.html
+++ b/index.html
@@ -3,71 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SmartCargo | May Roga LLC</title>
+    <title>SmartCargo Advisory | May Roga LLC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
-        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; margin: 0; }
+        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; margin:0; }
         .card { max-width: 500px; margin: auto; background: white; border-radius: 20px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 15px 40px rgba(0,0,0,0.5); }
-        .lang-container { display: flex; justify-content: center; gap: 5px; margin-bottom: 15px; border-bottom: 1px solid #eee; padding-bottom: 10px; }
         .lang-btn { font-size: 10px; padding: 5px 12px; cursor: pointer; background: #f0f0f0; border: 1px solid #ccc; border-radius: 5px; font-weight: bold; }
-        .lang-btn.active { background: #d4af37; color: #000; border-color: #000; }
+        .lang-btn.active { background: #d4af37; color: #000; }
         .btn-opt { border: 2px solid #001d3d; padding: 10px; border-radius: 10px; text-align: center; cursor: pointer; font-size: 11px; font-weight: bold; margin-bottom: 8px; background: #f8f9fa; }
         .selected { background: #001d3d !important; color: white !important; }
         .btn-main { background: #001d3d; color: white; width: 100%; height: 50px; font-weight: bold; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
-        .timer { background: #d4af37; color: black; text-align: center; font-weight: bold; padding: 8px; border-radius: 8px; margin-bottom: 15px; font-size: 13px; }
-        #mainApp { display: none; margin-top: 20px; }
-        #previewContainer { display: none; width: 100%; border-radius: 12px; overflow: hidden; border: 3px solid #001d3d; margin-bottom: 15px; background: #000; }
-        #mainPreview { width: 100%; height: auto; display: block; max-height: 400px; object-fit: contain; }
-        .report { background: #f1f3f5; border-left: 6px solid #001d3d; padding: 18px; border-radius: 10px; white-space: pre-wrap; font-size: 14px; margin-top: 15px; }
+        #mainApp { display: none; margin-top: 15px; }
+        .photo-grid { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 8px; margin-bottom: 10px; }
+        .photo-box { width: 100%; height: 110px; background: #000; border: 2px solid #001d3d; border-radius: 8px; object-fit: contain; display: none; }
+        .report { background: #f1f3f5; border-left: 6px solid #1b5e20; padding: 15px; border-radius: 10px; font-size: 14px; margin-top: 15px; }
     </style>
 </head>
 <body onclick="resetIdle()">
 <div class="card">
-    <div class="lang-container">
+    <div style="display:flex; justify-content:center; gap:5px; margin-bottom:15px;">
         <button id="btnEn" class="lang-btn active" onclick="setLang('en', this)">ENGLISH</button>
         <button id="btnEs" class="lang-btn" onclick="setLang('es', this)">ESPAÑOL</button>
     </div>
 
-    <div class="banner" style="background:#001d3d; color:white; padding:15px; border-radius:12px; text-align:center; border:1px solid #d4af37; margin-bottom:15px;">
-        <h3 style="margin:0; font-weight:900; color:#d4af37;">SMARTCARGO</h3>
-        <p style="font-size:10px; margin:0; font-weight:bold;">TECHNICAL ADVISORY • MAY ROGA LLC</p>
-    </div>
-
     <div id="accessSection">
-        <label id="lblRole" style="font-size:11px; font-weight:bold;">1. USER ROLE:</label>
-        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-bottom:15px;">
-            <div class="btn-opt role-btn" onclick="selRole('Shipper', this)">SHIPPER / OWNER</div>
-            <div class="btn-opt role-btn" onclick="selRole('Forwarder', this)">FORWARDER</div>
-            <div class="btn-opt role-btn" onclick="selRole('Trucker', this)">TRUCKER</div>
-            <div class="btn-opt role-btn" onclick="selRole('Operator', this)">OPERATOR</div>
-        </div>
-        <label id="lblTier" style="font-size:11px; font-weight:bold;">2. SERVICE TIER:</label>
-        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-bottom:15px;">
+        <h6 style="text-align:center; font-weight:bold; font-size:12px;">SMARTCARGO ADVISORY</h6>
+        <div class="btn-opt role-btn" onclick="selRole('Shipper', this)">SHIPPER / OWNER</div>
+        <div class="btn-opt role-btn" onclick="selRole('Operator', this)">OPERATOR</div>
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:5px;">
             <div class="btn-opt tier-btn" onclick="selTier(5, this)">COURIER ($5)</div>
-            <div class="btn-opt tier-btn" onclick="selTier(10, this)">STANDARD ($10)</div>
-            <div class="btn-opt tier-btn" onclick="selTier(45, this)">CRITICAL ($45)</div>
             <div class="btn-opt tier-btn" onclick="selTier(95, this)">PROJECT ($95)</div>
         </div>
-        <input type="text" id="awbField" class="u-full-width" placeholder="Reference / AWB / BOL">
-        <button id="activateBtn" class="btn-main">VALIDATE AND ACCESS</button>
+        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / BOL / REFERENCE">
+        <button id="activateBtn" class="btn-main">VALIDATE & ACCESS</button>
     </div>
 
     <div id="mainApp">
-        <div id="timerDisp" class="timer"></div>
-        <div id="previewContainer">
-            <img id="mainPreview" src="">
-            <div style="background:#001d3d; color:white; font-size:10px; padding:5px; text-align:center; font-weight:bold;">PHOTO REFERENCE VIEW</div>
+        <div id="timerDisp" style="background:#d4af37; text-align:center; font-weight:bold; padding:5px; margin-bottom:10px; border-radius:5px; font-size:11px;"></div>
+        <div class="photo-grid"><img id="p1" class="photo-box"><img id="p2" class="photo-box"><img id="p3" class="photo-box"></div>
+        <button class="btn-main" style="height:35px; font-size:10px; margin-bottom:10px; background:#444;" onclick="document.getElementById('fileInput').click()">📸 ADD PHOTOS (MAX 3)</button>
+        <input type="file" id="fileInput" style="display:none" accept="image/*" multiple onchange="loadPhotos()">
+        
+        <div style="position:relative;">
+            <textarea id="promptArea" class="u-full-width" style="height:100px; padding-right:40px;" placeholder="Describe issue or use voice..."></textarea>
+            <button onclick="startVoice()" style="position:absolute; right:10px; top:10px; border:none; background:none; cursor:pointer; font-size:18px;">🎤</button>
         </div>
-        <form id="advForm">
-            <div id="dropZone" style="border:2px dashed #d4af37; padding:15px; text-align:center; border-radius:12px; background:#f9fbff; cursor:pointer; margin-bottom:15px;" onclick="document.getElementById('fileInput').click()">
-                <span id="txtScan" style="font-weight:bold; color:#001d3d; font-size:11px;">📸 SCAN / UPLOAD PHOTO (OPTIONAL)</span>
-                <input type="file" id="fileInput" style="display:none" accept="image/*" onchange="showPreview()">
-            </div>
-            <textarea id="promptArea" class="u-full-width" style="height:120px; border-radius:10px; border:1px solid #001d3d;" placeholder="Describe what you want to check..."></textarea>
-            <button id="btnSolve" type="submit" class="btn-main" style="background:#1b5e20;">GET SOLUTION</button>
-            <button id="btnReset" type="button" class="btn-main" style="background:#666; margin-top:10px; height:40px; font-size:12px;" onclick="clearAll()">RESET / NEW CHECK</button>
-        </form>
+
+        <button id="btnSolve" class="btn-main" style="background:#1b5e20;" onclick="getSolution()">GET SOLUTION</button>
         <div id="advResponse"></div>
+        <button id="btnWs" class="btn-main" style="background:#25D366; margin-top:10px; display:none;" onclick="sendWS()">📩 SHARE SOLUTION TO WHATSAPP</button>
+        <button class="btn-main" style="background:#666; margin-top:5px; height:35px;" onclick="location.reload()">NEW CASE / RESET</button>
     </div>
 </div>
 <script src="app.js"></script>
