--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SmartCargo-AIPA Resiliente</title>
+    <title>SmartCargo-AIPA | OpenAI Core</title>
     <style>
         :root { --red: #d32f2f; --gold: #c5a059; --dark: #0a192f; }
-        body { background: #000; color: #fff; font-family: sans-serif; padding: 10px; margin: 0; }
-        .card { background: #fff; color: #333; border-radius: 15px; padding: 15px; max-width: 450px; margin: auto; }
-        input, textarea { width: 100%; padding: 10px; margin-bottom: 8px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; }
+        body { background: #000; color: #fff; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 10px; }
+        .card { background: #fff; color: #333; border-radius: 15px; padding: 15px; max-width: 450px; margin: auto; box-shadow: 0 10px 25px rgba(0,0,0,0.5); }
+        input, textarea { width: 100%; padding: 12px; margin-bottom: 8px; border: 1px solid #ccc; border-radius: 8px; box-sizing: border-box; font-size: 14px; }
         .photo-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 10px; }
-        .photo-box { height: 100px; border: 2px dashed var(--gold); border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; position: relative; cursor: zoom-in; }
-        .photo-box img { width: 100%; height: 100%; object-fit: cover; }
-        .btn-voice { width: 100%; padding: 15px; background: var(--dark); color: var(--gold); border: 2px solid var(--gold); border-radius: 10px; font-weight: bold; margin-bottom: 10px; cursor: pointer; }
-        .btn-exec { width: 100%; padding: 18px; background: var(--red); color: #fff; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; }
-        #resBox { display: none; margin-top: 15px; padding: 15px; background: #f0f0f0; border-left: 5px solid var(--gold); border-radius: 8px; color: #000; }
-        .vip-active { background: var(--gold) !important; color: white !important; }
+        .photo-box { height: 110px; border: 2px dashed var(--gold); border-radius: 10px; display: flex; align-items: center; justify-content: center; overflow: hidden; position: relative; cursor: zoom-in; background: #f9f9f9; }
+        .photo-box img { width: 100%; height: 100%; object-fit: cover; transition: 0.3s; }
+        .btn-voice { width: 100%; padding: 15px; background: var(--dark); color: var(--gold); border: 2px solid var(--gold); border-radius: 12px; font-weight: bold; margin-bottom: 10px; cursor: pointer; touch-action: none; }
+        .btn-exec { width: 100%; padding: 20px; background: var(--red); color: #fff; border: none; border-radius: 12px; font-weight: bold; font-size: 16px; cursor: pointer; }
+        .btn-vip { width: 100%; padding: 10px; background: #fff; color: var(--gold); border: 2px solid var(--gold); border-radius: 10px; font-weight: bold; margin-bottom: 10px; cursor: pointer; }
+        .btn-vip.active { background: var(--gold); color: #fff; }
+        #resBox { display: none; margin-top: 15px; padding: 15px; background: #f1f1f1; border-left: 6px solid var(--gold); border-radius: 8px; color: #000; }
     </style>
 </head>
 <body>
     <div class="card">
         <h2 style="text-align:center; color:var(--red); margin:0;">SmartCargo-AIPA</h2>
-        <p style="text-align:center; font-size:10px; color:var(--gold); margin-bottom:10px;">RESPALDO AUTOMÁTICO ACTIVADO</p>
+        <p style="text-align:center; font-size:10px; color:var(--gold); font-weight:bold; margin-bottom:15px;">POWERED BY OPENAI CORE</p>
         
-        <input type="text" id="awb" placeholder="AWB / ULD #">
+        <input type="text" id="awb" placeholder="AWB / ULD NUMBER">
         <div style="display:flex; gap:5px;">
             <input type="number" id="L" placeholder="L"><input type="number" id="W" placeholder="W"><input type="number" id="H" placeholder="H">
         </div>
@@ -33,27 +34,28 @@
             <div class="photo-box" onclick="z(this)"><img id="v2" style="display:none;"><span>📸 CARGO</span><input type="file" id="f2" hidden onchange="pv(this,'v2')"></div>
         </div>
 
-        <button class="btn-voice" id="voiceBtn">🎤 MANTÉN PARA DICTAR</button>
-        <button id="vipBtn" onclick="toggleVip()" style="width:100%; padding:10px; border:1px solid var(--gold); border-radius:10px; margin-bottom:10px; font-weight:bold; cursor:pointer;">💎 ACLARAR DUDAS (MODO MAESTRO)</button>
-        <textarea id="obs" rows="3" placeholder="Describe carga o pide lección..."></textarea>
+        <button class="btn-voice" id="voiceBtn">🎤 MANTÉN PARA DICTAR REPORTE</button>
+        <button class="btn-vip" id="vipBtn" onclick="toggleVip()">💎 ACLARAR DUDAS (MODO MAESTRO)</button>
+        <textarea id="obs" rows="3" placeholder="Describe la carga o el documento..."></textarea>
         
-        <button class="btn-exec" onclick="enviar()">EJECUTAR ANÁLISIS</button>
+        <button class="btn-exec" onclick="send()">EJECUTAR ASESORÍA MAESTRA</button>
 
         <div id="resBox">
-            <small id="sourceTag" style="color:var(--gold); font-weight:bold;"></small>
-            <div id="resTxt" style="font-size:13px; white-space:pre-wrap; margin-top:5px;"></div>
-            <button onclick="hablar()" style="width:100%; padding:10px; margin-top:10px; background:var(--dark); color:#fff; border-radius:8px;">🔊 ESCUCHAR</button>
+            <small id="sourceTag" style="color:var(--gold); font-weight:bold; text-transform:uppercase; font-size:9px;"></small>
+            <div id="resTxt" style="font-size:14px; white-space:pre-wrap; margin-top:5px; line-height:1.4;"></div>
+            <button onclick="speak()" style="width:100%; padding:12px; margin-top:10px; background:var(--dark); color:#fff; border-radius:10px; font-weight:bold;">🔊 ESCUCHAR LECCIÓN</button>
+            <button onclick="window.print()" style="width:100%; padding:8px; margin-top:5px; background:#fff; border:1px solid #333; border-radius:10px; font-size:12px;">📄 GENERAR REPORTE PDF</button>
         </div>
     </div>
 
     <script>
         let isVip = false;
-        function toggleVip() { isVip = !isVip; document.getElementById('vipBtn').classList.toggle('vip-active'); }
+        function toggleVip() { isVip = !isVip; document.getElementById('vipBtn').classList.toggle('active'); }
 
         function z(el) {
             const img = el.querySelector('img');
             if(img.style.display === "none") el.querySelector('input').click();
-            else img.style.transform = img.style.transform === "scale(2.5)" ? "scale(1)" : "scale(2.5)";
+            else { img.style.transform = img.style.transform === "scale(2.5)" ? "scale(1)" : "scale(2.5)"; img.style.zIndex = "100"; }
         }
 
         function pv(input, id) {
@@ -66,15 +68,14 @@
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'es-ES'; recognition.continuous = true;
 
-        voiceBtn.onmousedown = voiceBtn.ontouchstart = (e) => { e.preventDefault(); recognition.start(); voiceBtn.style.background = "red"; };
-        voiceBtn.onmouseup = voiceBtn.ontouchend = () => { recognition.stop(); voiceBtn.style.background = ""; };
+        voiceBtn.onmousedown = voiceBtn.ontouchstart = (e) => { e.preventDefault(); recognition.start(); voiceBtn.innerText = "🔴 ESCUCHANDO..."; voiceBtn.style.background = "red"; };
+        voiceBtn.onmouseup = voiceBtn.ontouchend = () => { recognition.stop(); voiceBtn.innerText = "🎤 MANTÉN PARA DICTAR REPORTE"; voiceBtn.style.background = ""; };
         recognition.onresult = (e) => { document.getElementById('obs').value = e.results[e.results.length-1][0].transcript; };
 
-        async function enviar() {
-            const resBox = document.getElementById('resBox');
-            const resTxt = document.getElementById('resTxt');
-            resBox.style.display = "block";
-            resTxt.innerText = "Sincronizando con Hub de Inteligencia...";
+        async function send() {
+            const txt = document.getElementById('resTxt');
+            document.getElementById('resBox').style.display = "block";
+            txt.innerText = "Consultando con el Maestro de Carga OpenAI...";
 
             const fd = new FormData();
             fd.append('prompt', document.getElementById('obs').value);
@@ -87,14 +88,18 @@
             try {
                 const response = await fetch('/advisory', { method: 'POST', body: fd });
                 const result = await response.json();
-                resTxt.innerText = result.data;
+                txt.innerText = result.data;
                 document.getElementById('sourceTag').innerText = result.source;
             } catch (err) {
-                resTxt.innerText = "Error total de conexión. Revise que las API Keys estén en Render.";
+                txt.innerText = "Error de comunicación. Verifique su OPENAI_API_KEY en Render.";
             }
         }
 
-        function hablar() { window.speechSynthesis.speak(new SpeechSynthesisUtterance(document.getElementById('resTxt').innerText)); }
+        function speak() {
+            const utterance = new SpeechSynthesisUtterance(document.getElementById('resTxt').innerText);
+            utterance.lang = 'es-ES';
+            window.speechSynthesis.speak(utterance);
+        }
     </script>
 </body>
 </html>
